    handshakes. (jbaldassari & cutting)

    AVRO-970. Java: Make Codec API public. (Rui Pereira via cutting)

    AVRO-1223. Java: Add a static method to generated classes that
    returns its schema, getClassSchema().  (cutting)

    AVRO-1232. Java: Add a toString() method to AvroWrapper so that it
    works with TextOutputFormat.  (Garrett Wu via cutting)

  BUG FIXES

    AVRO-1231. Java: Fix Trevni shredder to work on non-recursive
    schemas with multiple references. (Mark Wagner via cutting)

    AVRO-1230. avro-mapred-1.7.3-hadoop1.jar does not work with
    Hadoop 1. (tomwhite)

    AVRO-1233. Java: Fix InputBuffer's constructor to use the
    specified initial position. (Mark Wagner via cutting)

    AVRO-1227. Java: Large ByteBuffers can corrupt output. (cutting)

Avro 1.7.3 (6 December 2012)

  NEW FEATURES

    AVRO-485.  JavaScript: Add validator. (Quinn Slack via cutting) 

    AVRO-1157. Java: Extend schema and protocol property support from
    string-only to full JSON. (cutting)

    AVRO-1186. Java: Extend specific compiler to emit Java annotations
    on interfaces, classes, fields and methods for the property
    "javaAnnotation".  The value of the property may either be a
    string or a JSON array of strings in order to emit multiple
    annotations. (cutting)

    AVRO-1188. Java: Permit external schema imports for schemas in
    Maven plugin. (Sharmarke Aden via tomwhite)

    AVRO-1202. Java & Python: Add "Getting Started" guides.
    (Skye Wanderman-Milne via cutting)

    AVRO-1205. Java: Add stereotype annotation to generated classes.
    All classes generated by the specific compiler now have the
    annotation org.apache.avro.specific.AvroGenerated.
    (Sharmarke Aden via cutting)

    AVRO-988. Java: Add option to make fields in generated classes
    private, public, or public & deprecated.  This is specified with
    the "fieldVisibility" option in Maven and is public_deprecated by