@@ -25,6 +25,8 @@ Trunk (not yet released)
     AVRO-1232. Java: Add a toString() method to AvroWrapper so that it
     works with TextOutputFormat.  (Garrett Wu via cutting)
 
+    AVRO-1241. Java: Optimize Trevni string input. (Joseph Adler via cutting)
+
   BUG FIXES
 
     AVRO-1231. Java: Fix Trevni shredder to work on non-recursive
